@@ -107,10 +107,17 @@ source (input) and destination (output/error) files.  <em>Since Ant 1.6.2</em>
   <tr>
     <td valign="top">alwayslog</td>
     <td valign="top">Always send to the log in addition to
-        any other destination. Default <code>false</code>.
-        <i>Since Ant 1.6.3</i>.
+        any other destination. <i>Since Ant 1.6.3</i>.
     </td>
-    <td align="center" valign="top">No</td>
+    <td align="center" valign="top">No, default is <code>false</code></td>
+  </tr>
+  <tr>
+    <td valign="top">loginputstring</td>
+    <td valign="top">Controls the display of <i>inputstring</i>'s value in
+        log messages. Set to <code>false</code> when sending sensitive data
+        (e.g. passwords) to external processes. <i>Since Ant 1.6.3</i>.
+    </td>
+    <td align="center" valign="top">No, default is <code>true</code></td>
   </tr>
 </table>
 <h3>Parameters specified as nested elements</h3>
@@ -153,7 +160,7 @@ Tasks known to support I/O redirection:
 dependent on the supporting task.  Any possible points of confusion
 should be noted at the task level.</p>
 <hr />
-<p align="center">Copyright &copy; 2004 The Apache Software Foundation. All rights
+<p align="center">Copyright &copy; 2004-2005 The Apache Software Foundation. All rights
 Reserved.</p>
 
 </body>
